update section & menu hash

--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
                 <nav class="header-nav">
                     <ul class="header-nav-items">
                         <li><a class="header-nav-item" href="#">Beranda</a></li>
-                        <li><a class="header-nav-item" href="#">Tentang Kami</a></li>
-                        <li><a class="header-nav-item" href="#">SDM</a></li>
-                        <li><a class="header-nav-item" href="#">Security Training</a></li>
-                        <li><a class="header-nav-item" href="#">Layanan</a></li>
-                        <li><a class="header-nav-item" href="#">Pendaftaran</a></li>
-                        <li><a class="header-nav-item" href="#">Manajemen</a></li>
-                        <li><a class="header-nav-item" href="#">Kontak</a></li>
+                        <li><a class="header-nav-item" href="#tentang-kami">Tentang Kami</a></li>
+                        <li><a class="header-nav-item" href="#sdm">SDM</a></li>
+                        <li><a class="header-nav-item" href="#security-training">Security Training</a></li>
+                        <li><a class="header-nav-item" href="#layanan">Layanan</a></li>
+                        <li><a class="header-nav-item" href="#pendaftaran">Pendaftaran</a></li>
+                        <li><a class="header-nav-item" href="#manajemen">Manajemen</a></li>
+                        <li><a class="header-nav-item" href="#kontak">Kontak</a></li>
                     </ul>
                 </nav>
                 <div id="headerBackdrop" class="backdrop"></div>
                 <nav id="headerSidenav" class="header-sidenav">
                     <ul>
                         <li><a class="header-sidenav-item" href="#">Beranda</a></li>
-                        <li><a class="header-sidenav-item" href="#">Tentang Kami</a></li>
-                        <li><a class="header-sidenav-item" href="#">SDM</a></li>
-                        <li><a class="header-sidenav-item" href="#">Security Training</a></li>
-                        <li><a class="header-sidenav-item" href="#">Layanan</a></li>
-                        <li><a class="header-sidenav-item" href="#">Pendaftaran</a></li>
-                        <li><a class="header-sidenav-item" href="#">Manajemen</a></li>
-                        <li><a class="header-sidenav-item" href="#">Kontak</a></li>
+                        <li><a class="header-sidenav-item" href="#tentang-kami">Tentang Kami</a></li>
+                        <li><a class="header-sidenav-item" href="#sdm">SDM</a></li>
+                        <li><a class="header-sidenav-item" href="#security-training">Security Training</a></li>
+                        <li><a class="header-sidenav-item" href="#layanan">Layanan</a></li>
+                        <li><a class="header-sidenav-item" href="#pendaftaran">Pendaftaran</a></li>
+                        <li><a class="header-sidenav-item" href="#manajemen">Manajemen</a></li>
+                        <li><a class="header-sidenav-item" href="#kontak">Kontak</a></li>
                     </ul>
                 </nav>
                 <button id="headerSidenavButton" class="header-sidenav-button">
@@ -61,7 +61,7 @@
                 aset pengguna jasa </div>
         </div>
     </section>
-    <section class="py-10 space-y-10 lg:py-20">
+    <section id="tentang-kami" class="py-10 space-y-10 lg:py-20">
         <div class="rgs-container">
             <div class="flex items-center space-x-6">
                 <img class="hidden lg:block" src="./assets/img/about-desktop.png" alt="">
@@ -153,7 +153,7 @@
             </div>
         </div>
     </section>
-    <section class="sdm mb-20">
+    <section id="sdm" class="sdm mb-20">
         <div class="sdm-banner relative overflow-hidden py-16 flex justify-center items-end">
             <img class="absolute top-0 left-0 w-full h-full object-cover" src="./assets/img/sdm.png" alt="">
             <div class="relative text-white text-xl bg-black bg-opacity-50 py-8 px-12 font-semibold">Sumber Daya Manusia
@@ -254,7 +254,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="security-training">
         <div class="relative">
             <img class="w-full h-96 md:h-auto object-cover" src="./assets/img/services-type-banner.png" alt="">
             <div
@@ -299,7 +299,7 @@
             </div>
         </div>
     </section>
-    <section id="brosur" class="-mt-5 mb-20">
+    <section id="layanan" class="-mt-5 mb-20">
         <div class="rgs-container mb-8">
             <div class="text-center text-primary font-semibold text-xl">
                 <p>Pelatihan SATPAM Gada Pratama 2021 - 2022</p>
@@ -360,7 +360,7 @@
             </div>
         </div>
     </section>
-    <section class="relative">
+    <section id="pendaftaran" class="relative">
         <img class="absolute left-0 top:0 w-full h-full object-cover opacity-30" src="./assets/img/img-brosur2.png"
             alt="">
         <div class="relative rgs-container px-0 md:px-10 grid md:grid-cols-2">
@@ -410,7 +410,7 @@
             </div>
         </div>
     </section>
-    <section class="relative overflow-hidden">
+    <section id="manajemen" class="relative overflow-hidden">
         <img class="w-full lg:hidden h-96 object-cover" src="./assets/img/manajemen-perusahaan-mobile.png" alt="">
         <img class="absolute hidden lg:inline-block right-0 transform translate-x-1/4 top-1/2 -translate-y-1/2 h-5/6"
             src="./assets/img/manajemen-perusahaan.png" alt="">
@@ -455,7 +455,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="kontak">
         <div class="relative bg-gradient-to-r from-black via-black to-transparent text-white text-sm py-16">
             <img style="z-index: -1;" class="absolute right-0 top-0 w-full object-cover h-full"
                 src="./assets/img/footer.png" alt="">
