fix revise : header, download button & visi

--- a/index.html
+++ b/index.html
@@ -93,12 +93,9 @@
                 <button id="aboutMisiButton" class="rgs-button">MISI</button>
             </div>
             <div class="border-2 border-gray-300 bg-gray-100 p-6 rounded-md">
-                <ol id="aboutVisi" class="list-decimal list-outside ml-3 hidden">
-                    <li>Visi menyiapkan dan menyediakan personel Satpam yang tangguh dan profesional.</li>
-                    <li>Melaksanakan pendidikan personel Satpam secara profesional </li>
-                    <li>Memperlakukan personel Satpam secara manusiawi sebagai aset perusahaan</li>
-                    <li>Mengutamakan kepuasan dan kepercayaan pengguna jasa Satpam</li>
-                </ol>
+                <div id="aboutVisi" class="list-decimal list-outside ml-3 hidden">
+                    <p>Menjadi perusahaan jasa pengamanan yang unggul, profesional, berkualitas dan berintegras.</p>
+                </div>
                 <ol id="aboutMisi" class="list-decimal list-outside ml-3">
                     <li>Misi menyiapkan dan menyediakan personel Satpam yang tangguh dan profesional.</li>
                     <li>Melaksanakan pendidikan personel Satpam secara profesional </li>
@@ -378,10 +375,10 @@
                     <p>Juni 2021</p>
                 </div>
             </div>
-            <div class="bg-primary py-16 px-10 text-white space-y-8">
+            <div class="bg-primary py-16 px-5 md:px-10 text-white space-y-8">
                 <div>
                     <div class="font-semibold text-lg mb-3">Informasi & Pendaftaran:</div>
-                    <table>
+                    <table class="text-sm md:text-base break-all md:break-normal">
                         <tr>
                             <td class="pr-8">Sumardjo</td>
                             <td>08129588508</td>
@@ -394,19 +391,19 @@
                 </div>
                 <div>
                     <div class="font-semibold text-lg mb-3">Tempat Pendaftaran Offline</div>
-                    <p> RAJAWALI GUARD SERVICES <br> Komplek Gading Bukit Indah Blok D No 18<br> Jl. Bukit Gading
-                        Raya,Kelapa Gading Permai,Jakarta Utara 14240<br> Tlp : (021) 4515845 </p>
+                    <p class="text-sm md:text-base break-all md:break-normal"> RAJAWALI GUARD SERVICES <br> Komplek
+                        Gading Bukit Indah Blok D No 18<br> Jl. Bukit Gading Raya,Kelapa Gading Permai,Jakarta Utara
+                        14240<br> Tlp : (021) 4515845 </p>
                 </div>
                 <div>
                     <div class="font-semibold text-lg mb-3">Pendaftaran Online</div>
-                    <p>Silahkan unduh Formulir Pendaftaran dengan menekan tombol di bawah ini. Isikan Formulir dengan
-                        baik dan benar, lalu email ke <span
+                    <p class="text-sm md:text-base break-all md:break-normal">Silahkan unduh Formulir Pendaftaran dengan
+                        menekan tombol di bawah ini. Isikan Formulir dengan baik dan benar, lalu email ke <span
                             class="text-yellow-400">rgs-corporate@rajawaliguardservices.com</span> beserta Soft Copy
                         dokumen-dokumen lain yang diminta.</p>
                 </div>
-                <button
-                    class="bg-white block w-full rounded-md font-bold text-lg shadow-md text-primary text-center p-8 hover:bg-gray-100 transition-all duration-200">
-                    UNDUH FORMULIR </button>
+                <a class="bg-white block w-full rounded-md font-bold text-lg shadow-md text-primary text-center p-8 hover:bg-gray-100 transition-all duration-200"
+                    href="http://www.africau.edu/images/default/sample.pdf"> UNDUH FORMULIR </a>
             </div>
         </div>
     </section>
