update revise 2 : banner

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             </div>
         </div>
     </header>
-    <section class="banner">
-        <div class="banner-wrapper rgs-container">
-            <img class="banner-background" src="./assets/img/banner.png" alt="RGS Banner">
-            <div class="banner-content"> Pelayanan prima untuk <strong>menjaga</strong> dan <strong>mengamankan</strong>
-                aset pengguna jasa </div>
-        </div>
+    <section class="relative mt-16 py-6">
+        <img class="w-full" src="./assets/img/banner.png" alt="RGS Banner">
+        <div
+            class="absolute right-10 bottom-10 md:bottom-1/2 transform md:translate-y-1/2 bg-black bg-opacity-60 text-base md:text-3xl text-white p-5 md:p-10 leading-relaxed text-left md:text-left w-2/3">
+            Pelayanan prima untuk <strong class="text-primary">menjaga</strong> dan <strong>mengamankan</strong> aset
+            pengguna jasa </div>
     </section>
     <section id="tentang-kami" class="py-10 space-y-10 lg:py-20">
         <div class="rgs-container">
